--- a/styles/pages/_header.scss
+++ b/styles/pages/_header.scss
@@ -63,6 +63,11 @@ header {
     transition-timing-function: ease-in-out;
     transition-duration: 0.05s;
 }
+header.header-white {
+    background-color: #fff;
+    -webkit-animation: slide-down .3s ease-out;
+    -moz-animation: slide-down .3s ease-out;
+}
 
 .white-logo {
     .header-wrapper {
