--- a/styles/pages/_header-common.scss
+++ b/styles/pages/_header-common.scss
@@ -34,7 +34,7 @@
                     display: inline-block;
                     color: #fff;
                     letter-spacing: normal;
-                    &.header-bottom-navigation{
+                    &.hamburger-menu{
                         display: flex;
                         .nav-hamburger-icon {
                             width: 1.35vw;
