--- a/pages/lucid-reality/lucid-reality.scss
+++ b/pages/lucid-reality/lucid-reality.scss
@@ -1,52 +1,23 @@
 @import '../../styles/base/variables';
 @import '../../styles/utilities/mixins';
 
-// Global Styles
-body {
-  margin: 0;
-  padding: 0;
-}
 
-.small-heading {
-  color: #01C4CF;
-  font-size: 14px;
-  text-transform: uppercase;
-}
-
+// Common Styles
 .padding-1 {
   padding: 50px 25px;
   padding-right: 0;
   padding-bottom: 0;
 }
 
-.padding-btm-20 {
-  padding-bottom: 20px;
-}
-
-.padding-left-20 {
-  padding-left: 20px;
-}
-
-.padding-ryt-100 {
-  padding-right: 100px;
-}
-
-.margin-top-50 {
-  margin-top: 50px;
-}
-
-.mob-ui {
-  width: 95%;
-}
-
 .label {
   color: #01C4CF;
-  font-family: map-get($font-families, secondary);
-  font-size: 14px;
+  font-family: map-get($font-families, secondary-medium);
+  font-size: 12px;
   font-weight: 500;
   letter-spacing: -0.2px;
-  line-height: 18px;
+  line-height: 15px;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
 .main-heading {
@@ -56,7 +27,7 @@ body {
   font-weight: bold;
   letter-spacing: -0.2px;
   line-height: 44px;
-  margin-top: 10px;
+  margin-bottom: 20px;
   @media only screen and (max-width: 767px) {
     font-size: 24px;
     line-height: 30px;
@@ -71,6 +42,7 @@ body {
   letter-spacing: -0.2px;
   line-height: 28px;
   line-height: 1.7vw;
+  margin-bottom: 20px;
   margin-top: 20px;
   @media only screen and (max-width: 767px) {
     font-size: 16px;
@@ -85,6 +57,10 @@ body {
 // Global section divison
 .section-1 {
   width: 45%;
+
+  .mob-ui {
+    width: 95%;
+  }
 }
 
 .section-2 {
@@ -113,8 +89,8 @@ $border-radius: 5px;
 }
 
 %gutter {
-  padding-left: 20%; //24%
-  padding-right: 20%; //24%
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 
@@ -126,13 +102,13 @@ $border-radius: 5px;
   padding-bottom: 70px;
 }
 
-.header {
-  width: 100%;
-  height: 100px;
-  position: fixed;
-  border: 1px solid black;
-  box-sizing: border-box;
-}
+//.header {
+//  width: 100%;
+//  height: 100px;
+//  position: fixed;
+//  border: 1px solid black;
+//  box-sizing: border-box;
+//}
 
 // Page Styles
 .lucid-reality {
@@ -140,8 +116,6 @@ $border-radius: 5px;
 
   section {
     width: 100%;
-    // height: 100vh;
-    // border: 1px solid red;
     box-sizing: border-box;
   }
 
@@ -205,7 +179,7 @@ $border-radius: 5px;
     padding: 0 16px;
 
     @include break-small-to-large(tablet) {
-      //@extend %gutter;
+
     }
 
     .inner-container {
@@ -298,12 +272,14 @@ $border-radius: 5px;
       @extend %section-btm-spacing;
 
       .solution-list-wrapper {
+        margin-top: 50px;
         margin-left: 50px;
 
         &__items {
           position: relative;
           border-left: 2px solid #01C4CF;
           padding-left: 28px;
+          padding-bottom: 20px;
 
           &:last-child {
             border-left: 2px solid transparent;
@@ -452,27 +428,56 @@ $border-radius: 5px;
 
   // Eighth Section
   .read-next {
+    .label {
+    }
 
+    .inner-container {
+      .first-section {
+        h2 {
+          color: #000000;
+          font-family: Circular;
+          font-size: 26px;
+          font-weight: bold;
+          letter-spacing: -0.2px;
+          line-height: 36px;
+        }
+
+        p {
+
+        }
+
+        a {
+
+        }
+      }
+
+      .second-section {
+
+      }
+    }
   }
 
   // Ninth Section
   .see-more {
-    @extend %gutter;
-    background: url('/images/Slide-BG.png');
-    background-color: #E8EFF2;
-    background-size: contain;
-    background-position: bottom;
-    background-repeat: no-repeat;
-    height: 31vw;
+    background: url('/images/Slide-BG.png') no-repeat;
+    background-size: cover;
+    background-position: right 15% bottom 0%;
+    height: 45vh;
 
-    .common-wrapper {
-      @extend %section-top-spacing;
+    .inner-container {
+      //padding-top: 70px;
 
       .common-para--for-see-more {
-        padding-right: 100px;
-        padding-right: 7.8vw;
-        padding-bottom: 12px;
-        padding-bottom: 1vw;
+        margin-bottom: 20px;
+      }
+
+      .secondary-cta {
+        display: inline-flex;
+        align-items: center;
+
+        img {
+          margin-right: 20px;
+        }
       }
     }
 
